--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,6 +35,7 @@ spring:
             scope:
               - read:user
 #              - user:follow
+            redirect-uri: ${REDIRECT_URI}
 # Log
 logging:
   level:
