--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,33 @@
-# P6spy
-decorator:
-  datasource:
-    p6spy:
-      enable-logging: true
+spring:
 
-# Logging
-logging:
-  level:
-    org.springframework.security: debug
+  # MySQL
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
+
+  # Redis
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
+  # JWT
+  jwt:
+    secret: ${JWT_SECRET_KEY}
+
+  # Security
+
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: ${CLIENT_ID}
+            client-secret : ${CLIENT_SECRET}
+            scope:
+              - read:user
+              - user:follow
+            redirect-uri: ${REDIRECT_URI}
